# simpletree

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
autoload/: simpletabline.vim  simpletree.vim  spacemacs_theme.vim  spacemacs_theme_v9.vim
colors/: spacemacs.vim
doc/: simpletree.txt
plugin/: simpletabline.vim  simpletree.vim  spacemacs_theme.vim
src/simpletree/: simpletree_daemon.rs
tests/: daemon_observability.rs  daemon_protocol.rs  vim_integration.vim  vim_runtime_controls.vim  vim_smoke.vim
