[package]
name = "simpletree"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simpletree-daemon"
path = "src/simpletree/simpletree_daemon.rs"

[dependencies]
anyhow = "1.0.100"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "rt", "sync"] }
tokio-util = "0.7.16"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
